feat: Refactor HomeScreen to use FutureBuilder for API data fetching
- Changed HomeScreen to PokedexScreen and implemented FutureBuilder to fetch Pokémon data from the API.
- Added loading and error handling states in the FutureBuilder.
- Updated PokedexWidget to accept data as a parameter instead of fetching it directly.

chore: Remove unused font family references in OnboardingScreen

- Removed font family references from text styles in OnboardingScreen.

feat: Enhance PokedexWidget with search functionality and filter modal

- Added a search bar and filter preferences modal to PokedexWidget.
- Implemented a new PokemonListTile widget to display Pokémon details.
- Integrated favorites functionality using a new FavoritesProvider.

feat: Create ProfileScreen and RegionesScreen

- Added ProfileScreen and RegionesScreen with basic layout and navigation.

chore: Clean up Dio provider error handling

- Removed unused error handling function from Dio provider.

feat: Implement FavoritesProvider for managing favorite Pokémon

- Created FavoritesNotifier to handle adding, removing, and checking favorite Pokémon.
- Added providers for accessing favorites count and list.

style: Update CustomBottomNavigation for better route handling

- Refactored CustomBottomNavigation to use Riverpod for route management.
- Improved bottom navigation bar styling and functionality.

feat: Add custom default button widget

- Created CustomDefaultButton for consistent button styling across the app.

fix: Update error widget styles

- Removed font family references from PokedexErrorWidget.

feat: Implement filter preferences modal for Pokémon types

- Added FilterPreferencesModal to allow users to filter Pokémon by type.

feat: Create Pokémon search bar widget

- Added PokémonSearchBar widget for searching Pokémon by name.

--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -27,5 +27,13 @@
   "letsStartButton": "Empecemos",
   "@letsStartButton": {
     "description": "Texto del botón empecemos"
+  },
+  "favoritesEmptyTitle": "No has marcado ningún \nPokémon como favorito",
+  "@favoritesEmptyTitle": {
+    "description": "Título mostrado cuando la lista de favoritos está vacía"
+  },
+  "favoritesEmptySubtitle": "Haz clic en el ícono de corazón de tus \nPokémon favoritos y aparecerán aquí.",
+  "@favoritesEmptySubtitle": {
+    "description": "Subtítulo mostrado cuando la lista de favoritos está vacía"
   }
 }
