--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -27,5 +27,13 @@
   "letsStartButton": "Let's Start",
   "@letsStartButton": {
     "description": "Let's start button text"
+  },
+  "favoritesEmptyTitle": "You haven't marked any \nPokémon as favorite",
+  "@favoritesEmptyTitle": {
+    "description": "Title shown when favorites list is empty"
+  },
+  "favoritesEmptySubtitle": "Click on the heart icon of your \nfavorite Pokémon and they will appear here.",
+  "@favoritesEmptySubtitle": {
+    "description": "Subtitle shown when favorites list is empty"
   }
 }
