feat: Update app branding and icons, change app title to "Pokedex App", and add launcher icons for various resolutions

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "en",
-  "appTitle": "PokeApp",
+  "appTitle": "Pokedex App",
   "@appTitle": {
     "description": "The title of the application"
   },
