--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "es",
-  "appTitle": "PokeApp",
+  "appTitle": "Pokedex App",
   "@appTitle": {
     "description": "El título de la aplicación"
   },
